run language specific containers and fix timeouts

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DOCKER_HOST="YOUR_DOCKER_HOST"
 REDIS_HOST_ADDRESS="YOUR_REDDIS_HOST"
+SOURCE_MOUNT="YOUR_SOURCE_MOUNT"
+DESTINATION_MOUNT="YOUR_DESTINATION_MOUNT"
